hphp/hack/test/typecheck/nonnull/array_is_subtype_of_nonnull.php.exp
File "array_is_subtype_of_nonnull.php", line 7, characters 30-43:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 24, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 24, characters 34-41:
  This type constraint is violated
  File "hackarray.hhi", line 24, characters 34-41:
  Expected `arraykey`
  File "array_is_subtype_of_nonnull.php", line 7, characters 37-38:
  But got `Tk`
File "array_is_subtype_of_nonnull.php", line 15, characters 30-43:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 24, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 24, characters 34-41:
  This type constraint is violated
  File "hackarray.hhi", line 24, characters 34-41:
  Expected `arraykey`
  File "array_is_subtype_of_nonnull.php", line 15, characters 37-38:
  But got `Tk`
